Update class 9 for github

--- a/class09/Class 9 unsupervised learning mini project.Rmd
+++ b/class09/Class 9 unsupervised learning mini project.Rmd
@@ -2,7 +2,7 @@
 title: "class09"
 author: "Jelani Lyda"
 date: "10/30/2019"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
