--- a/Class12/Class12.Rmd
+++ b/Class12/Class12.Rmd
@@ -33,7 +33,8 @@ write.pdb(protein, file = "1hsg_protein.pdb")
 
 
 ```{r}
-
+res <- read.pdb("all.pdbqt", multi = TRUE)
+write.pdb(res, file = "results.pdb")
 ```
 
 
